<resources>
    <string name="app_name">Rahlati</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_history">History</string>
    <string name="tripname">Trip Name</string>
    <string name="name">Name</string>
    <string name="startpoint">Start Point</string>
    <string name="search">Search</string>
    <string name="endpoint">End Point</string>
    <string name="hintse">"        Search"</string>
    <string name="startdetails">Start Details</string>
    <string name="addtrip">Add Trip</string>
</resources>