<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetTripActivity" >

    <TextView
        android:id="@+id/textview_tripname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tripname"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textview_tripname"
        app:layout_constraintTop_toBottomOf="@+id/textview_tripname" />

    <TextView
        android:id="@+id/textview_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/startpoint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview_tripname"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="295dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview_start"
        app:layout_constraintTop_toBottomOf="@+id/textview_start">

        <EditText
            android:id="@+id/edt_search_st"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:drawablePadding="4dp"
            android:hint="@string/search"
            android:padding="4dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/endpoint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview_start"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="299dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_end"
        app:layout_constraintTop_toBottomOf="@+id/textView_end">

        <EditText
            android:id="@+id/edt_search_end"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:drawablePadding="4dp"
            android:hint="@string/search"
            android:padding="4dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/startdetails"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="@+id/textView_end"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/cal_img"
        android:layout_width="101dp"
        android:layout_height="84dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <ImageView
        android:id="@+id/alarm_img"
        android:layout_width="91dp"
        android:layout_height="78dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/cal_img"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/cal_img"
        app:layout_constraintTop_toBottomOf="@+id/cal_img" />

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/alarm_img"
        app:layout_constraintTop_toBottomOf="@+id/alarm_img" />

    <Spinner
        android:id="@+id/spiner_repeat"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Spinner
        android:id="@+id/spiner_type"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:text="@string/addtrip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>